# gamedev

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
01-hello-world/: .clang-format  CMakeLists.txt
01-hello-world/lib/: CMakeLists.txt
01-hello-world/lib/include/: hello_lib.hpp
01-hello-world/lib/src/: hello_lib.cpp
01-hello-world/lib/tests/: CMakeLists.txt  unit_tests.cpp
01-hello-world/third-party-lib/: CMakeLists.txt
02-sdl/: CMakeLists.txt
02-sdl/sdl-shared/: CMakeLists.txt
02-sdl/sdl-shared/src/: main.cpp
02-sdl/sdl-static/: CMakeLists.txt
03-sdl-input/: CMakeLists.txt
03-sdl-input/03-1-input-simple/: CMakeLists.txt
03-sdl-input/03-1-input-simple/src/: main.cpp
03-sdl-input/03-2-input-engine/: CMakeLists.txt
03-sdl-input/03-2-input-engine/include/: engine.hpp
03-sdl-input/03-2-input-engine/src/: engine.cpp  main.cpp
04-render/: CMakeLists.txt
04-render/include/: image.hpp  render_interpolated.hpp  render_line.hpp  render_triangle.hpp
04-render/tests/: render_tests.cpp
engine/: CMakeLists.txt  shader.frag  shader.vert  vertexes.txt
engine/include/: engine.hpp
engine/src/: engine.cpp  main.cpp
notes/: lesson1.txt  lesson2.txt  lesson3.txt  lesson4.txt  lesson5.txt  lesson6(render).txt
